# RL-Dice

./: CMakeLists.txt  LICENSE  README.md
include/: dice.hpp
src/: dice.cpp
tests/: test.cpp
